# kaggle_airbus_ship_detection

./: .gitignore  Dockerfile  Pipfile  PipfileOLD  README.md  pyproject.toml  requirements.txt  setup.py  submission.csv
dash_app/: app.py  callbacks.py  eda_00_Image_class.py  figures.py  image_utils.py  old.py  utils.py
dash_app/assets/: layouts.css  slider.css  typography.css
graveyard/: dom.py  other.py
notebooks/: MJ-baseline-unet.ipynb  MJ_baseline-u-net-model-part-1.ipynb  MJ_baseline-u-net-model-part-1.py  MJ_u-net-model-with-submission.py  MJ_u-net-model-with-submission_OLD_DEL.ipynb  OLD_u-net-model-with-submission.ipynb
reference_guides/: MPL_gridspecs.py  kmeans_tutorial_sample  kmeans_tutorial_sample.py  knn_test.py  knn_test_00  knn_test_01.py  knn_tutorial_iris.py
reference_kernels/: airbus-ship-detection-data-visualization.ipynb  airbus-ship-detection-data-visualization.py  baseline-u-net-model-part-1.py  u-net-model-with-submission.py
src/0_environment/: environment_00_logging.py  environment_01_imports.py
src/1_classes/: classes_0.py
src/2_load_data/: data_00_load.py
src/3_EDA/: eda_00.py  eda_00_Image_class.py  eda_01.py  kmeans_tutorial_sample.py  plotly_basic_tests_3d.py  test_plot_3d_color.py  testing_dash_scatter3d.py
src/Scripts/: extract_zip_sample.py
src/X_OLD/: knn_test_01.py
src_final/1_classes/: classes_01_transformers.py  classes_02_datastruct.py  classes_03_modelsearch.py  classes_04_petparser.py  classes_05_petparser2.py  classes_06_xgb_kernel.py
src_manage/: nb_convert_jupytext.py  payload.py
(+12 files in other folders)
