[tool.poetry]
name = "kaggle_airbus_ship_detection"
version = "0.1.0"
description = "PCA pixel level image analysis for automated detection of ships in water. Includes a Dash Plotly app."
authors = ["MarcusJones <jones.0bj3@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "^1.1.2"
dash = "^1.16.0"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.1"
opencv-python = "^4.4.0"
dash-daq = "^0.5.0"
seaborn = "^0.11.0"
imutils = {git = "https://github.com/MarcusJones/imutils"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
